# GitPullTracker

./: ffmpeg-2025-10-12-git-aaaaaa-full_build.7z.007  node-v16.20.2-x64.7z.002  pyproject.toml
assets/: styles.css
src/gitpulltracker/: __init__.py  app.py
src/gitpulltracker/ui/: layout.py  state.py  tables.py
