[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpulltracker"
version = "0.1.0"
description = "Interactive parquet investigation workbench."
authors = [
    { name = "GitPullTracker" }
]
requires-python = ">=3.10"
dependencies = [
    "dash>=2.17.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "plotly>=5.21.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.8",
    "ruff>=0.5"
]

[project.scripts]
gitpulltracker-app = "gitpulltracker.app:main"
